# forest-fire

./: Cargo.toml  README.md  forest_fire-8299377050a5bf42.js  forest_fire-8299377050a5bf42_bg.wasm  index.html
src/: forest.rs  geometry.rs  main.rs
