[package]
name = "forest_fire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
eframe = "0.19.0"
egui = "0.19.0"
noise = "0.8.2"
rand = "0.8.5"
rand_xoshiro = "0.6.0"
sha2 = "0.10.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
